--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
                     <!--          <scmCommentPrefix>#42${line.separator}</scmCommentPrefix>-->
 
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.release</groupId>
+                        <artifactId>maven-release-semver-policy</artifactId>
+                        <version>3.0.0-M5</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
