--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <scm>
         <url>https://github.com/nielsbasjes/xxx</url>
         <connection>scm:git:https://github.com/nielsbasjes/xxx.git</connection>
-        <developerConnection>scm:git:.</developerConnection>
+        <developerConnection>scm:git:file:///.</developerConnection>
     </scm>
 
 </project>
