--- a/pom.xml
+++ b/pom.xml
@@ -2,107 +2,109 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nl.basjes.reltest</groupId>
-    <artifactId>reltester</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>nl.basjes.reltest</groupId>
+  <artifactId>reltester</artifactId>
+  <version>1.1-SNAPSHOT</version>
 
-    <name>reltester</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+  <name>reltester</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
-    <build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <releaseProfiles>release</releaseProfiles>
+          <preparationGoals>clean verify</preparationGoals>
+          <pushChanges>false</pushChanges>
+          <remoteTagging>false</remoteTagging>
+          <scmCommentPrefix>build:</scmCommentPrefix>
+          <scmReleaseCommitComment>@{prefix} Version @{releaseLabel}</scmReleaseCommitComment>
+          <scmDevelopmentCommitComment>@{prefix} Start development for next version</scmDevelopmentCommitComment>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.release</groupId>
+            <artifactId>maven-release-semver-policy</artifactId>
+            <version>3.0.0-M5</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+
+    </plugins>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.0-M5</version>
+          <plugin>
+            <!-- Description: https://github.com/git-commit-id/git-commit-id-maven-plugin -->
+            <groupId>io.github.git-commit-id</groupId>
+            <artifactId>git-commit-id-maven-plugin</artifactId>
+            <version>5.0.0</version>
+            <executions>
+              <execution>
+                <id>Validate-Revision-Information</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>validateRevision</goal>
+                </goals>
                 <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                    <releaseProfiles>release</releaseProfiles>
-                    <preparationGoals>clean verify</preparationGoals>
-                    <pushChanges>false</pushChanges>
-                    <scmCommentPrefix>build:</scmCommentPrefix>
-                    <scmReleaseCommitComment>@{prefix} Version @{releaseLabel}</scmReleaseCommitComment>
-                    <scmDevelopmentCommitComment>@{prefix} Start development for next version</scmDevelopmentCommitComment>
+                  <validationProperties>
+                    <!-- verify that the current repository is not dirty -->
+                    <validationProperty>
+                      <name>Don't try to release if something has not yet been committed.</name>
+                      <value>${git.dirty}</value>
+                      <shouldMatchTo>false</shouldMatchTo>
+                    </validationProperty>
+                    <!--                  &lt;!&ndash; verify that the current commit has a tag &ndash;&gt;-->
+                    <!--                  <validationProperty>-->
+                    <!--                    <name>validating current commit has a tag</name>-->
+                    <!--                    <value>${git.closest.tag.commit.count}</value>-->
+                    <!--                    <shouldMatchTo>0</shouldMatchTo>-->
+                    <!--                  </validationProperty>-->
+                  </validationProperties>
+                  <validationShouldFailIfNoMatch>true</validationShouldFailIfNoMatch>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.release</groupId>
-                        <artifactId>maven-release-semver-policy</artifactId>
-                        <version>3.0.0-M5</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+              </execution>
+            </executions>
+          </plugin>
 
         </plugins>
-    </build>
+      </build>
+    </profile>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- Description: https://github.com/git-commit-id/git-commit-id-maven-plugin -->
-                        <groupId>io.github.git-commit-id</groupId>
-                        <artifactId>git-commit-id-maven-plugin</artifactId>
-                        <version>5.0.0</version>
-                        <executions>
-                            <execution>
-                                <id>Validate-Revision-Information</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>validateRevision</goal>
-                                </goals>
-                                <configuration>
-                                    <validationProperties>
-                                        <!-- verify that the current repository is not dirty -->
-                                        <validationProperty>
-                                            <name>Don't try to release if something has not yet been committed.</name>
-                                            <value>${git.dirty}</value>
-                                            <shouldMatchTo>false</shouldMatchTo>
-                                        </validationProperty>
-                                        <!--                  &lt;!&ndash; verify that the current commit has a tag &ndash;&gt;-->
-                                        <!--                  <validationProperty>-->
-                                        <!--                    <name>validating current commit has a tag</name>-->
-                                        <!--                    <value>${git.closest.tag.commit.count}</value>-->
-                                        <!--                    <shouldMatchTo>0</shouldMatchTo>-->
-                                        <!--                  </validationProperty>-->
-                                    </validationProperties>
-                                    <validationShouldFailIfNoMatch>true</validationShouldFailIfNoMatch>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+  </profiles>
 
-                </plugins>
-            </build>
-        </profile>
-
-    </profiles>
-
-    <scm>
-        <url>https://github.com/nielsbasjes/xxx</url>
-        <connection>scm:git:https://github.com/nielsbasjes/xxx.git</connection>
-        <developerConnection>scm:git:.</developerConnection>
-    </scm>
+  <scm>
+    <url>https://github.com/nielsbasjes/xxx</url>
+    <connection>scm:git:https://github.com/nielsbasjes/xxx.git</connection>
+    <developerConnection/>
+    <tag>HEAD</tag>
+  </scm>
 
 </project>
