--- a/pom.xml
+++ b/pom.xml
@@ -4,30 +4,63 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>nl.basjes.reltest</groupId>
-  <artifactId>reltester</artifactId>
+  <artifactId>releasetester-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <name>reltester</name>
+  <name>Releasetester: </name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.8.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.9.0</version>
+        <configuration>
+          <release>11</release>
+          <compilerArgs>
+            <!-- Enable almost all warnings.-->
+            <!-- Ignore 'classfile' to allow leaving Kryo out. -->
+            <!-- Ignore 'processing' to avoid "No processor claimed any of these annotations" in several places. -->
+            <!-- Ignore 'serial' warnings about not having a serialVersionUID -->
+            <arg>-Xlint:all,-classfile,-processing,-serial</arg>
+            <arg>-Werror</arg>
+            <arg>-implicit:class</arg>
+          </compilerArgs>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <failIfNoTests>true</failIfNoTests>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -39,9 +72,9 @@
           <preparationGoals>clean verify</preparationGoals>
           <pushChanges>false</pushChanges>
           <remoteTagging>false</remoteTagging>
-          <scmCommentPrefix>build:</scmCommentPrefix>
-          <scmReleaseCommitComment>@{prefix} Version @{releaseLabel}</scmReleaseCommitComment>
-          <scmDevelopmentCommitComment>@{prefix} Start development for next version</scmDevelopmentCommitComment>
+          <scmCommentPrefix>ci(Release):</scmCommentPrefix>
+          <scmReleaseCommitComment>ci(Release): Version @{releaseLabel}</scmReleaseCommitComment>
+          <scmDevelopmentCommitComment>ci(Release): Start development for next version</scmDevelopmentCommitComment>
         </configuration>
         <dependencies>
           <dependency>
@@ -67,7 +100,7 @@
         <repository>
           <id>Local</id>
           <name>Local repo</name>
-          <url>file:///${project.basedir}/releaserepo</url>
+            <url>file:///${project.basedir}/releaserepo</url>
         </repository>
       </distributionManagement>
     </profile>
@@ -80,5 +113,10 @@
     <developerConnection>scm:git:file:///${project.basedir}</developerConnection>
     <tag>HEAD</tag>
   </scm>
+
+  <modules>
+    <module>library</module>
+    <module>application</module>
+  </modules>
 
 </project>
