--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
+          <preparationGoals>-PPrepareForRelease clean verify</preparationGoals>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <tagNameFormat>v@{project.version}</tagNameFormat>
           <releaseProfiles>release</releaseProfiles>
@@ -95,44 +96,6 @@
       <url>file:///home/nbasjes/workspace/Prive/releasetest/deployTest/</url>
     </repository>
   </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>release</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>3.0.0</version>
-            <executions>
-              <execution>
-                <id>Set released version in website</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <configuration>
-                  <executable>${project.basedir}/release-scripts/UpdateReleasedVersionInWebsite.sh</executable>
-                  <arguments>
-                    <argument>${project.version}</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-        </plugins>
-      </build>
-
-      <!--      <properties>-->
-      <!--        <altReleaseDeploymentRepository>sonatype::https://oss.sonatype.org/service/local/staging/deploy/maven2/</altReleaseDeploymentRepository>-->
-      <!--        <altSnapshotDeploymentRepository>sonatype::https://oss.sonatype.org/content/repositories/snapshots</altSnapshotDeploymentRepository>-->
-      <!--      </properties>-->
-
-    </profile>
-
-  </profiles>
 
   <scm>
     <url>https://github.com/nielsbasjes/xxx</url>
