--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -12,8 +12,7 @@
 
   <artifactId>releasetester-documentation</artifactId>
   <name>Releasetester: Documentation</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://niels.basjes.nl</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
