--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <packaging>pom</packaging>
 
   <name>Releasetester:</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://niels.basjes.nl</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
