--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>3.0.0-M6-SNAPSHOT</version>
         <configuration>
+
+          <allowReleasePluginSnapshot>true</allowReleasePluginSnapshot>
+
           <preparationGoals>-PPrepareForRelease clean verify</preparationGoals>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <tagNameFormat>v@{project.version}</tagNameFormat>
