--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -77,10 +77,26 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>./UpdateReleasedVersionInWebsite.sh</executable>
+              <executable>sh</executable>
               <arguments>
-                <argument>${project.version}</argument>
+                <argument>echo -n ${project.version} > ./layouts/shortcodes/YauaaVersion.md</argument>
               </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>2.0.0-M1</version>
+        <executions>
+          <execution>
+            <id>Add generated files</id>
+            <phase>generate-resources</phase>
+            <goals><goal>add</goal></goals>
+            <configuration>
+              <includes>./layouts/shortcodes/YauaaVersion.md</includes>
             </configuration>
           </execution>
         </executions>
