--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -64,47 +64,57 @@
           <skip>true</skip>
         </configuration>
       </plugin>
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <id>Set released version in website</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>sh</executable>
-              <arguments>
-                <argument>-c</argument>
-                <argument>echo -n ${project.version} &gt; ${project.basedir}/${documentationVersionFile} ; exit 0</argument>
-              </arguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-scm-plugin</artifactId>
-        <version>2.0.0-M1</version>
-        <executions>
-          <execution>
-            <id>Add generated files to next commit</id>
-            <phase>generate-resources</phase>
-            <goals><goal>add</goal></goals>
-            <configuration>
-              <includes>${documentationVersionFile}</includes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
     </plugins>
   </build>
+
+
+  <profiles>
+    <profile>
+      <id>PrepareRelease</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <executions>
+              <execution>
+                <id>Set released version in website</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>sh</executable>
+                  <arguments>
+                    <argument>-c</argument>
+                    <argument>echo -n ${project.version} &gt; ${project.basedir}/${documentationVersionFile} ; exit 0</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+            <version>2.0.0-M1</version>
+            <executions>
+              <execution>
+                <id>Add generated files to next commit</id>
+                <phase>generate-resources</phase>
+                <goals><goal>add</goal></goals>
+                <configuration>
+                  <includes>${documentationVersionFile}</includes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <scm>
     <url>https://github.com/nielsbasjes/xxx</url>
