--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -98,7 +98,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-scm-plugin</artifactId>
-            <version>2.0.0-M1</version>
+            <version>2.0.0-M2-SNAPSHOT</version>
             <executions>
               <execution>
                 <id>Add generated files to next commit</id>
@@ -106,6 +106,15 @@
                 <goals><goal>add</goal></goals>
                 <configuration>
                   <includes>${documentationVersionFile}</includes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>Changelog</id>
+                <phase>validate</phase>
+                <goals><goal>changelog</goal></goals>
+                <configuration>
+                  <limit>1000</limit>
+<!--                  <includes>${documentationVersionFile}</includes>-->
                 </configuration>
               </execution>
             </executions>
