--- a/pom.xml
+++ b/pom.xml
@@ -89,17 +89,23 @@
         </dependencies>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <artifactId>maven-scm-plugin</artifactId>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <phase>validate</phase>-->
-<!--            <goals>-->
-<!--              <goal>changelog</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+
+      <plugin>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>2.0.0-M1</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>changelog</goal>
+            </goals>
+            <configuration>
+              <limit>1000</limit>
+              <!--                  <includes>${documentationVersionFile}</includes>-->
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
     </plugins>
   </build>
